[gd_scene load_steps=3 format=3 uid="uid://dfgybu1xb5gr0"]

[ext_resource type="Script" uid="uid://c0138l55svl62" path="res://modules/menu/minigame_menu.gd" id="1_oo15i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbbci"]
bg_color = Color(0.592474, 0.85303, 0.592649, 1)

[node name="MinigameMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oo15i")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qbbci")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -107.0
offset_right = 87.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Upgrades" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Upgrades"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
